[package]
name = "sosistun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sosistab = "0.4.16"

x25519-dalek={ version = "1.1.1", features = ["serde"] }
rand = "0.8.4"
rand_core = "0.6.3"

tokio = { version = "1.10.1", features = ["full"] }
async-net = "1.6.1"
futures-lite = "1.12.0"
