[package]
name = "sosistun"
description = "A Secure & Unidentifiable Tunnel based on Sosistab"
keywords = [ "sosistab", "sosistun", "rdup", "tunnel", "udp" ]
version = "2.0.0"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/madaraful/sosistun"
authors = [ "Madara Eirik" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sosistab = "0.4.16"

x25519-dalek={ version = "1.1.1", features = ["serde"] }
rand = "0.8.4"
rand_core = "0.6.3"

smol = "1.2.5"

dirs = "3.0"

async-recursion = "0.2"

